--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html>
-  <link type="text/css> rel="stylesheet" href="https://github.com/jredovich/anniversary/blob/master/beck.css">
+  <link type="text/css> rel="stylesheet" href="../css/beck.css">
 
   <body>
     <header> Happy Anniversary Becky</header>
