--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html>
-  <link type="text/css" rel="stylesheet" href="../anniversary/beck.css">
+  <link type="text/css" rel="stylesheet" href="beck.css">
 
   <body>
     <header> Happy Anniversary Becky</header>
