--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Jake and Becky
     <p class="bigbeck">
       </a>
       <strong>The past two years have been a wonderful treat with you. I can't imagine where the next two will take us. It's been such a blessing to be with you, Becky. You don't even know what you mean to me.</strong>
-    </p>
+      Long distance can be hard, but you make it <em>worth</em> it.</p>
     <a href="https://en.wikipedia.org/wiki/Honey">
       <div style="text-align: right"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/18194051_10155111796675351_5191854636355232669_n.jpg?oh=4b61ebb81edc1c3f0d85bd371d9fe2db&oe=5A0D0025" width="200" class="beckv"></a>
     <a href="https://en.wikipedia.org/wiki/Tea"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/18222456_10155130008210351_7354612172235268087_n.jpg?oh=ae43323ca4ca1c84234be209bb4bad51&oe=59C45C26" style="float: left; width: 30%; margin-left: 10%; "></a>
