--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <link type="text/css" rel="stylesheet" href="becky.css">
-  <body>
+   <body>
     <header> Happy Anniversary Becky</header>
 
     <h1>
@@ -12,20 +12,19 @@ Jake and Becky
 
 
     <a href="https://en.wikipedia.org/wiki/Salmon">
-      <div style="text-align: center"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/12106718_10207289164323500_4346688560401079188_n.jpg?oh=99fdae0d69ecd2577cd3cf2f3d112415&oe=5A11E790" style="float: right; width: 30%; margin-right: 1%; margin-bottom: 0.5em;" class="beckv" class="beckv"></a>
+      <div style="text-align: center"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/12106718_10207289164323500_4346688560401079188_n.jpg?oh=99fdae0d69ecd2577cd3cf2f3d112415&oe=5A11E790" style="float: right; " class="beckv"></a>
 
 
-    <p class="bigbeck">
+   
+    <a href="https://en.wikipedia.org/wiki/Honey">
+      <div style="text-align: right"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/18194051_10155111796675351_5191854636355232669_n.jpg?oh=4b61ebb81edc1c3f0d85bd371d9fe2db&oe=5A0D0025" class="beckv"></a>
+    <a href="https://en.wikipedia.org/wiki/Tea"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/18222456_10155130008210351_7354612172235268087_n.jpg?oh=ae43323ca4ca1c84234be209bb4bad51&oe=59C45C26" style="float: left; " class="beckv"></a>
+
+
+    <a href="https://en.wikipedia.org/wiki/Jesus"><img src="http://news.nationalgeographic.com/content/dam/news/2016/03/04/grizzly_delisting/01grizzlydelisting.jpg" style="float: right;" class= "beckh"></a>
+     <p class="bigbeck">
       </a>
       <strong>The past two years have been a wonderful treat with you. I can't imagine where the next two will take us. It's been such a blessing to be with you, Becky. You don't even know what you mean to me.</strong>
-      Long distance can be hard, but you make it <em>worth</em> it.</p>
-    <a href="https://en.wikipedia.org/wiki/Honey">
-      <div style="text-align: right"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/18194051_10155111796675351_5191854636355232669_n.jpg?oh=4b61ebb81edc1c3f0d85bd371d9fe2db&oe=5A0D0025" width="200" class="beckv"></a>
-    <a href="https://en.wikipedia.org/wiki/Tea"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/18222456_10155130008210351_7354612172235268087_n.jpg?oh=ae43323ca4ca1c84234be209bb4bad51&oe=59C45C26" style="float: left; width: 30%; margin-left: 10%; "></a>
-
-
-    <a href="https://en.wikipedia.org/wiki/Jesus"><img src="http://news.nationalgeographic.com/content/dam/news/2016/03/04/grizzly_delisting/01grizzlydelisting.jpg" style="float: right; width: 50%; margin-left: 0%; " class="beckh"></a>
+    </p>
   </body>
-
-    
-</html>
+     </html>
