--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <link type="text/css" rel="stylesheet" href="becky.css">
 <body>
-    <header> Happy Anniversary Becky</header>
+    <header> Happy Anniversary, Becky</header>
 
     <h1>
 Jake and Becky
