--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <h1>
 Jake and Becky
 </h1>
+<h2>
+Two Years
+</h2>
     <a href="https://en.wikipedia.org/wiki/Grizzly_bear">
       <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-0/p206x206/12243092_10153793362899031_8685552152349460592_n.jpg?oh=254b3c8097cab79acddd722c5a25f4dc&oe=5A0C52D7"  class="beckh"></a>
 <a href="https://en.wikipedia.org/wiki/Jesus"><img src="http://news.nationalgeographic.com/content/dam/news/2016/03/04/grizzly_delisting/01grizzlydelisting.jpg"  style="float: right" class= "beckh"></a>
@@ -28,7 +31,19 @@ Jake and Becky
       </a>
       <strong>The past two years have been a wonderful treat with you. I can't imagine where the next two will take us. It's been such a blessing to be with you, Becky. You don't even know what you mean to me.</strong>
     </p>
-    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a href="https://stackoverflow.com/questions/618097/how-do-you-easily-horizontally-center-a-div-using-css">
+   <div style = "float: center">
+  
+    Pics
+   
+  
+   </div> </a>
    
 
   </body>
@@ -36,3 +51,4 @@ Jake and Becky
 alert("Hi Becky. Happy Two Years -Your Lover")
 </script>
 </html>
+
