--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Two Years
     <br>
     <br>
     <br>
-    <a href="https://stackoverflow.com/questions/618097/how-do-you-easily-horizontally-center-a-div-using-css">
+    <a href="pics">
    <div style = "float: center">
   
     Pics
