--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Two Years
     <br>
     <br>
     <br>
-    <a href="pics">
+    <a href="https://jredovich.github.io/anniversary-pics/">
    <div style = "float: center">
   
     Pics
