--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Two Years
     <br>
     <br>
     <br>
-    <a href="https://jredovich.github.io/anniversary-pics/">
+    <a href="https://jredovich.github.io/pictures/">
    <div style = "float: center">
   
     Pics
@@ -48,7 +48,7 @@ Two Years
 
   </body>
 <script language="javascript">
-alert("Hi Becky. Happy Two Years -Your Lover")
+alert("Hi Becky. Happy Two Years! -Your Lover")
 </script>
 </html>
 
