--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 Jake and Becky
 </h1>
 <h2>
-Two Years
+--Two Years--
+    <br>
+--One Bear--
 </h2>
     <a href="https://en.wikipedia.org/wiki/Grizzly_bear">
       <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-0/p206x206/12243092_10153793362899031_8685552152349460592_n.jpg?oh=254b3c8097cab79acddd722c5a25f4dc&oe=5A0C52D7"  class="beckh"></a>
