--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@ Jake and Becky
 
   </body>
 <script language="javascript">
-alert("Hi Becky. Happy Two Years! -Your Lover")
+alert("Hi Becky. Happy Two Years! -Your Lover");
+    var B=prompt("Enter the number of Beckies");
+    var J=prompt("Enter the number of Jakes");
+
 </script>
 </html>
 
