--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ alert("Hi Becky. Happy Two Years! -Your Lover");
     else if (B==0 && J==1) {alert("Jake is all alone!")}
     else if (B>0 && J>0 && B>J) {alert("OH NO! TOO MUCH BECKY! Jake is overwhelmed!")}
     else if (B>0 && J>0 && J>B) {alert("So much Jake! Becky is so happy!")}
-    else if (B>0 && J>0 && J==B) {alert("Good Ratio, I suppose.)}
+    else if (B>0 && J>0 && J==B) {alert("Good Ratio, I suppose.")}
     else {alert("Come on. Type real numbers next time!")}
     
     
