--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@ alert("Hi Becky. Happy Two Years! -Your Lover");
     else if (B==0 && J==0) {alert("Oh No! They're Dead!")}
     else if (B==1 && J==0) {alert("Becky is Lonely! :(")}
     else if (B==0 && J==1) {alert("Jake is all alone!")}
-    else if (B>0 && J>0 && B>J) {alert("OH NO! TOO MUCH BECKY! Jake is overwhelmed!")}
-    else if (B>0 && J>0 && J>B) {alert("So much Jake! Becky is so happy!")}
+    else if (B>0 && J==1 && B>J) {alert("OH NO! TOO MUCH BECKY! Jake is overwhelmed!")}
+    else if (B==1 && J>0 && J>B) {alert("So much Jake! Becky is so happy!")}
     else if (B>0 && J>0 && J==B) {alert("Good Ratio, I suppose.")}
+    else if (B>1 && J>1) {alert("Okay, this is getting ridiculous!")}
     else {alert("Come on. Type real numbers next time!")}
     
     
