--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
     <link type="text/css" rel="stylesheet" href="becky.css">
+    <script type='text/javascript' src='script.js'></script>
 <body>
     <header> Happy Anniversary, Becky</header>
 
