--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
     <link type="text/css" rel="stylesheet" href="becky.css">
-    <script type='text/javascript' src='beckk.java'></script>
+    <script type='text/javascript' src='beckk.js'></script>
 <body>
     <header> Happy Anniversary, Becky</header>
 
