--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link type="text/css" rel="stylesheet" href="becky.css">
      <script src="beckk.js" type="text/javascript"></script>
 <body>
-    <header> Happy Anniversary, Becky</header>
+    <header id="text"> Happy Anniversary, Becky</header>
 
     <h1>
 Jake and Becky
