--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 
 <html>
+    <head>
     <link type="text/css" rel="stylesheet" href="becky.css">
      <script src="beckk.js" type="text/javascript"></script>
+    </head>
 <body>
     <header id="text"> Happy Anniversary, Becky</header>
 
