--- a/index.html
+++ b/index.html
@@ -69,5 +69,12 @@ alert("Hi Becky. Happy Two Years! -Your Lover");
     
 
 </script>
+<script type="text/javascript">
+    (function(){ $('#text').click(function() { $(this).addClass('bigbeck');})
+
+
+
+})
+</script>
 </html>
 
