--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@ alert("Hi Becky. Happy Two Years! -Your Lover");
 
 </script>
 <script type="text/javascript">
-    (function(){ $('#text').click(function() { $(this).addClass('bigbeck');})
+    $(document).ready(function(){ $('#text').click(function() { $(this).addClass('bigbeck');
+                                                              })
 
 
 
-})
+});
 </script>
 </html>
 
