--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Highlights</title>
+		<title>Happy Anniversary Becky</title>
         <link rel='stylesheet' type='text/css' href='becky.css'/>
         <script type='text/javascript' src='beckk.js'></script>
 	</head>
