--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 		<title>Happy Anniversary Becky</title>
         <link rel='stylesheet' type='text/css' href='becky.css'/>
-        <script type='text/javascript' src='beckk.js'></script>
+        <script type='text/javascript' src='java.js'></script>
 	</head>
 	<body>
     <header id="text"> Happy Anniversary, Becky</header>
