--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ Jake and Becky
    
   
    </div> </a>
+
+ <h1 id="title">Javascript example no.2</h1>
+<input type="text" id="myTextField"/>
+<input type="submit" id="byBtn" value="Change" onclick="change()"/>
    
 
   </body>
