--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
 		<title>Happy Anniversary Becky</title>
+	    <script src="jquery-3.2.1.min.js"></script>
         <link rel='stylesheet' type='text/css' href='becky.css'/>
        <script type="text/javascript" src="java.js"></script>
 	</head>
