--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Jake and Becky
     <br>
     <br>
     <a href="https://jredovich.github.io/pictures/">
-   <div style = "float: center">
+   <div style = "float: center" id="divlover">
   
     Pics
    
