--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@ Jake and Becky
     
      <p class="bigbeck">
       </a>
-      <strong>The past two years have been a wonderful treat with you. I can't imagine where the next two will take us. It's been such a blessing to be with you, Becky. You don't even know what you mean to me.</strong>
+      <strong>The past two years have been a wonderful treat with you. I can't imagine where the next two will take us. It's been such a blessing to be with you, Becky. You don't even know what you mean to me. I love you so much. I look forward to brewing beer with you over the coming years. 
+	I appreciate all you do for me and all you mean to me. You make me feel loved and desired constantly and I truly appreciate it. You make it easy and 
+	enjoyable to be in a realtionship. Thank you for everything you do. I sincerely hope these two years turn into two thousand more.</strong>
     </p>
     <br>
     <br>
